<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/notificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/notif_title"
        android:text="@string/dungeons_and_dragons_gems_notification"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notificationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationTitle"
        android:contentDescription="@string/notif_message"
        android:text="@string/dungeons_and_dragons_gems_message"
        android:textSize="14sp" />

    <Button
        android:id="@+id/openLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationMessage"
        android:contentDescription="@string/notif_btn"
        android:text="@string/dungeons_and_dragons_gems_link" />

</RelativeLayout>