<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/backgroundVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:contentDescription="@string/background_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_back"
        app:layout_constraintBottom_toBottomOf="@+id/jackpotl"
        app:layout_constraintEnd_toStartOf="@+id/jackpot"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/jackpotl"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/jackpt_prize"
        android:contentDescription="@string/jackpot_bg"
        android:elevation="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jackpot"
        android:layout_width="350dp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/prize_text"
        android:elevation="25dp"
        android:text="@string/_250_565"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_jackpot"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/jackpotl"
        app:layout_constraintEnd_toEndOf="@+id/jackpotl"
        app:layout_constraintStart_toStartOf="@+id/jackpotl"
        app:layout_constraintTop_toTopOf="@+id/backgroundVideoView" />


    <include
        android:id="@+id/include"
        layout="@layout/slot_machine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:padding="25dp"/>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/relativeMyCoins"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/coins_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toEndOf="@id/settings"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/myCoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/current_coins"
            android:text="@string/_0575"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/spinButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_spin"
        android:contentDescription="@string/btn_spin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="NotSibling" />

    <ImageButton
        app:layout_constraintEnd_toEndOf="@id/betImageView"
        android:id="@+id/plusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_plus_bet"
        android:contentDescription="@string/btn_plus"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/betImageView"
        app:layout_constraintStart_toEndOf="@+id/bet"
        app:layout_constraintTop_toTopOf="@+id/betImageView"
        app:layout_constraintVertical_bias="0.178" />

    <ImageButton
        app:layout_constraintStart_toStartOf="@id/betImageView"
        android:id="@+id/minusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_minus_bet"
        android:contentDescription="@string/btn_minus"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/betImageView"
        app:layout_constraintEnd_toStartOf="@+id/bet"
        app:layout_constraintTop_toTopOf="@+id/betImageView"
        app:layout_constraintVertical_bias="0.107" />


    <ImageView
        android:id="@+id/betImageView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/bet_bar"
        android:contentDescription="@string/treasure_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/relativeMyCoins"
        app:layout_constraintEnd_toStartOf="@id/spinButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/bet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/_5"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_jackpot"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/betImageView"
        app:layout_constraintEnd_toEndOf="@+id/betImageView"
        app:layout_constraintStart_toStartOf="@+id/betImageView"
        app:layout_constraintTop_toTopOf="@+id/betImageView" />


    <ImageView
        android:id="@+id/settings"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/settings"
        android:contentDescription="@string/settings_btn"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundVideoView"
        app:layout_constraintEnd_toStartOf="@+id/relativeMyCoins"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <!--    <include-->
<!--        android:id="@+id/bottom_bar"-->
<!--        layout="@layout/bottom_bar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="103dp"-->
<!--        android:layout_marginBottom="72dp"-->
<!--        android:layout_weight="2"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>

