<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".GameSetting">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/setting_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/close"
            android:contentDescription="@string/close_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/music_on"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_music"
            android:contentDescription="@string/music_on_btn"
            android:elevation="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/music_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close" />

        <ImageView
            android:id="@+id/music_off"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_music_off"
            android:contentDescription="@string/music_off_btn"
            android:elevation="25dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/music"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/music"
            android:contentDescription="@string/music_btn"
            app:layout_constraintBottom_toBottomOf="@+id/music_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/sounds_off"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:background="@drawable/btn_sound_off"
            android:contentDescription="@string/sound_off_btn"
            android:elevation="25dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/music"
            app:layout_constraintBottom_toBottomOf="@+id/sounds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sounds" />

        <ImageView
            android:id="@+id/sounds_on"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:background="@drawable/btn_sound"
            android:contentDescription="@string/sound_on_btn"
            android:elevation="25dp"
            app:layout_constraintTop_toBottomOf="@id/music"
            app:layout_constraintBottom_toBottomOf="@+id/sounds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sounds" />


        <ImageView
            android:id="@+id/sounds"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/sounds"
            android:contentDescription="@string/sound_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/music"
            app:layout_constraintVertical_bias="0.365" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>